# fast-uint-div

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  README.md
cpp/: CMakeLists.txt  test_u32div.cpp  u32div.hpp
cuda/: CMakeLists.txt  bench_u32div.cu  test_u32div.cu  u32div.cuh  utils.cuh
python/: test_uintdiv.py
python/uintdiv/: __init__.py  uintdiv.py
